registry/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    k8s.labs.ahinh.me/app: registry
spec:
  type: LoadBalancer
  selector:
    k8s.labs.ahinh.me/app: registry
  ports:
  - name: https
    port: 443
    targetPort: 5000
    protocol: TCP
